# fungi

./: CMakeLists.txt
src/fungi/: main.cpp
src/fungi/panel/: panel.hpp  sound.cpp
src/fungi/panel/placeholder/: placeholder.cpp
src/fungi/panel/sound/: sound.cpp
